# oXygen

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  diario.md
Source/: Assets.h  MasteringModule.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/AI/: InferenceEngine.cpp  InferenceEngine.h
Source/GUI/: AudioBufferQueue.h  DynamicEqEditor.cpp  DynamicEqEditor.h  EqualizerEditor.cpp  EqualizerEditor.h  LevelMeter.h  MainComponent.cpp  MainComponent.h  MaximizerEditor.cpp  MaximizerEditor.h  ModuleRack.cpp  ModuleRack.h  ModuleWrapper.cpp  ModuleWrapper.h  MultibandCompressorEditor.cpp  MultibandCompressorEditor.h  SpectrumAnalyzer.cpp  SpectrumAnalyzer.h  StereoImagerEditor.cpp  StereoImagerEditor.h  Theme.h
Source/Modules/: DynamicEqModule.cpp  DynamicEqModule.h  EqualizerModule.cpp  EqualizerModule.h  GainModule.h  MaximizerModule.cpp  MaximizerModule.h  MultibandCompressorModule.cpp  MultibandCompressorModule.h  StereoImagerModule.cpp  StereoImagerModule.h
releases/oXygen.vst3/Contents/_CodeSignature/: CodeResources
